# autoperatio

./: LICENSE  README.md  setup.cfg  test_autoperatio.py
src/: autoperatio.py
