[metadata]
name = AutOperatio
version = 1.0.0
author = Ryan Laursen
description = Contains AutOperatio, a mixin which makes self-type-returning operations on instances of subclasses of general purpose built-in containers, dict, set, list, and tuple, return subclass instances.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RLaursen/autoperatio
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src